--- a/app/src/main/res/layout/activity_lottery_list.xml
+++ b/app/src/main/res/layout/activity_lottery_list.xml
@@ -33,6 +33,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@color/white"
         android:id="@+id/lvLotteryHistory">
 
     </ListView>
