--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,15 +4,26 @@
     android:layout_height="match_parent">
 
 
+
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:inputType="textEmailAddress"
         android:ems="10"
+        android:paddingLeft="48dp"
+        android:paddingBottom="15dp"
         android:hint="Email"
         android:text="costa@programmer.net"
         android:id="@+id/email"
         android:layout_alignParentTop="true" />
+    
+    <ImageView
+        android:layout_width="16dp"
+        android:layout_height="12dp"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/mail_icn"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="30dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
@@ -22,14 +33,22 @@
         android:background="@color/colorPrimary"/>
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:inputType="textPassword"
         android:ems="10"
         android:text="oifIlR"
+        android:paddingLeft="48dp"
 
         android:hint="Password"
         android:id="@+id/password"
         android:layout_below="@+id/view1" />
+    <ImageView
+        android:layout_width="16dp"
+        android:layout_height="12dp"
+        android:layout_below="@+id/view1"
+        android:src="@drawable/pas_icn"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="30dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +64,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:layout_marginTop="10dp"
+        android:background="@drawable/rectangle_34"
+        android:layout_marginTop="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_below="@+id/fpTv"
         android:id="@+id/loginBtn"/>
 
