--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -70,14 +70,16 @@
         android:textSize="20sp"
         android:id="@+id/tvComment"
         android:layout_below="@+id/ivUser"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:visibility="gone"
         android:id="@+id/ivPost"
         android:layout_below="@+id/tvComment"
-        android:layout_gravity="center_horizontal" />
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
