--- a/app/src/main/res/layout/activity_bottombar.xml
+++ b/app/src/main/res/layout/activity_bottombar.xml
@@ -48,13 +48,16 @@
             android:layout_height="match_parent"
             android:layout_weight="80"
             android:background="#00ffffff" />
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="20"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
-            android:id="@+id/faceImage"
-            android:src="@drawable/facebook_logo"/>
-    </LinearLayout>
+            android:layout_height="50dp"
+            android:src="@drawable/layer_5"
+            android:id="@+id/profileImage"
+            app:civ_border_color="#0fff"/>
+
+     </LinearLayout>
 </RelativeLayout>
