--- a/app/src/main/res/layout/facebook.xml
+++ b/app/src/main/res/layout/facebook.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <com.facebook.login.widget.LoginButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        xmlns:facebook="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:id="@+id/fbLogin"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        facebook:com_facebook_login_text=""
+        android:layout_marginRight="15dp"
         style="@style/FacebookLoginButton"/>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_below="@+id/fbLogin"
-        android:layout_centerHorizontal="true"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:src="@drawable/vector_smart_object"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"/>
 
 </RelativeLayout>
