--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
     <style name="FacebookLoginButton">
-        <!--<item name="android:textSize">@dimen/smallTxtSize</item>-->
-        <item name="android:background">@drawable/coin</item>
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:background">@drawable/layer_1</item>
+        <item name="android:paddingTop">10sp</item>
+        <item name="android:paddingBottom">10sp</item>
     </style>
 </resources>
