--- a/app/src/main/res/layout/profile_donate_header.xml
+++ b/app/src/main/res/layout/profile_donate_header.xml
@@ -13,8 +13,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:layout_marginTop="20dp"
             android:layout_alignParentTop="true"
-            android:textColor="#00f"
+            android:textColor="#0000ff"
             android:textSize="20dp"
             android:text="NAME"
             android:id="@+id/name"
@@ -22,9 +23,10 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="96dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
             android:layout_below="@+id/name"
-            android:layout_height="96dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/layer_5"
             app:civ_border_width="2dp"
@@ -32,13 +34,75 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_alignParentTop="true"
             android:textColor="#00f"
             android:textSize="20dp"
             android:text="Full Name"
             android:id="@+id/fullName"
             android:layout_below="@+id/profile_image"
             android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:textColor="#00f"
+            android:textSize="20dp"
+            android:text="Follow"
+            android:id="@+id/follow"
+            android:layout_below="@+id/fullName"
+            android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:textColor="#00f"
+            android:textSize="20dp"
+            android:text="2 donates"
+            android:id="@+id/donations"
+            android:layout_below="@+id/follow"
+            android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/rectangle_34"
+            android:id="@+id/niceLine"
+            android:layout_below="@+id/donations"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/niceLine"
+            android:weightSum="100"
+            >
+            <View
+                android:layout_width="0dp"
+                android:background="@color/transparent"
+                android:layout_height="match_parent"
+                android:layout_weight="20"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight="20"
+                android:id="@+id/smallImage1"
+                android:src="@drawable/pas_icn"
+
+                />
+            <View
+                android:layout_width="0dp"
+                android:background="@color/transparent"
+                android:layout_height="match_parent"
+                android:layout_weight="20"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight="20"
+                android:id="@+id/smallImage2"
+                android:src="@drawable/pas_icn" />
+
+            <View
+                android:layout_width="0dp"
+                android:background="@color/transparent"
+                android:layout_height="match_parent"
+                android:layout_weight="20"/>
+        </LinearLayout>
 
     </RelativeLayout>
 </FrameLayout>
