--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -78,18 +78,46 @@
         android:textColor="@color/black"
         android:textSize="20sp" />
 
-    <ImageView
-        android:id="@+id/ivPost"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvComment"
         android:layout_centerHorizontal="true"
-        android:visibility="gone" />
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp">
+
+
+        <ImageView
+            android:id="@+id/ivPost"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/imFound"
+            android:layout_width="39dp"
+            android:layout_height="39dp" />
+
+        <TextView
+            android:id="@+id/tvFoundTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="-2"
+            android:shadowDy="2"
+            android:shadowRadius="0.01"
+            android:text="Title"
+            android:textSize="15.6dp" />
+
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/ivPost">
+        android:layout_below="@+id/frameLayout">
 
         <ImageView
             android:id="@+id/ivLike"
