--- a/app/src/main/res/layout/activity_share_dialog.xml
+++ b/app/src/main/res/layout/activity_share_dialog.xml
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:padding="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="15dp"
@@ -66,22 +67,22 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="50"
-            android:layout_height="match_parent">
-            <Button
-                android:layout_width="90dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/rectangle_34"
-                android:gravity="center"
-                android:onClick="sharePost"
-                android:text="Post it!"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
-        </RelativeLayout>
+        android:layout_width="0dp"
+        android:layout_weight="50"
+        android:layout_height="match_parent">
+        <Button
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/rectangle_34"
+            android:gravity="center"
+            android:onClick="sharePost"
+            android:text="Post it!"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
+    </RelativeLayout>
     </LinearLayout>
 
     <View
@@ -89,7 +90,7 @@
         android:layout_height="1dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="@color/lightgrey"></View>
+        android:background="@color/lightgrey"/>
 
     <LinearLayout
         android:layout_width="match_parent"
