--- a/app/src/main/res/layout/suggested_connection_item.xml
+++ b/app/src/main/res/layout/suggested_connection_item.xml
@@ -18,10 +18,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/grey"
+        android:textColor="@color/lightBlue"
         android:text="Name"
         android:textSize="17sp"
-        android:id="@+id/tvUserName"
+        android:id="@+id/tvUserMail"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivUser"/>
 
@@ -30,28 +30,19 @@
         android:layout_height="wrap_content"
         android:text="Action"
         android:textSize="17sp"
-        android:textColor="@color/lightBlue"
-        android:id="@+id/tvAction"
-        android:layout_below="@+id/tvUserName"
+        android:textColor="@color/lightgrey"
+        android:id="@+id/tvFollowers"
+        android:layout_below="@+id/tvUserMail"
         android:layout_toRightOf="@+id/ivUser"
         android:layout_toEndOf="@+id/ivUser" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="when"
-        android:textSize="13sp"
-        android:textColor="#8e8e8e"
-        android:id="@+id/tvActionTime"
-        android:layout_marginBottom="16dp"
-        android:layout_below="@+id/tvAction"
-        android:layout_toRightOf="@+id/ivUser"
-        android:layout_toEndOf="@+id/ivUser" />
+
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imNotification"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imFollow"
+        android:src="@drawable/coin5"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true" />
 
