--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#666666"/>
+        android:color="@color/lightBlue"/>
 
     <size
         android:width="20dp"
